# 160-ComplexGen-CAD-Reconstruction-by-B-rep-Chain-Complex-Generation

./: CMakeLists.txt  README.md  citation.txt  config.toml
include/tqdm/: utils.h
process_data/: evaluate.py  upsample.py
src/: cgal_utils.cpp  cgal_utils.h  complexgen_object.cpp  complexgen_object.h  config.h  curve.cpp  curve.h  main.cpp  patch.cpp  patch.h  trim_obj.cpp  trim_obj.h
